# teimpy

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  build.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: workflow.yml
example/imgcat/: README.md  imgcat.py
src/teimpy/: __init__.py  drawer.py  shape.py
src/teimpy/impl/: __init__.py  base.py  block.py  braille.py  iterm2_inline_image.py  sixel.py  util.py
src/teimpy/libsixel/: __init__.py
tests/: conftest.py  test_draw.py  test_packaging.py
